testsuite/tests/parse-errors/unclosed_paren_module_type.mli
(* TEST
 setup-ocamlc.byte-build-env;
 ocamlc_byte_exit_status = "2";
 ocamlc.byte;
 check-ocamlc.byte-output;
*)

module M : (sig end
